# pix360core

./: .gitignore  .gitlab-ci.yml  LICENSE  pyproject.toml
src/pix360core/: admin.py  apps.py  backends.py  fields.py  installer.py  loader.py  tests.py  urls.py  views.py  worker.py
src/pix360core/classes/: __init__.py  exceptions.py  http.py  modules.py  stitching.py
src/pix360core/management/commands/: installmodules.py  runworker.py
src/pix360core/managers/: __init__.py  auth.py
src/pix360core/migrations/: 0001_initial.py  0002_conversion_file.py  0003_file_mime_type.py  0004_conversion_title.py  0005_alter_conversion_id_alter_conversion_status_and_more.py
src/pix360core/models/: __init__.py  auth.py  content.py
src/pix360core/static/css/: style.css
src/pix360core/static/js/: worker.js
src/pix360core/templates/pix360core/: converter.html
